  fixes the problem of some exceptions being thrown at shutdown when the
  interpreter is killed. Patch by Adam Olsen.

- Issue #7084: Fix a (very unlikely) crash when printing a list from one
  thread, and mutating it from another one.  Patch by Scott Dial.

- Issue #1747858: Fix lchown & fchown to work with large uid's and gid's on
  64-bit platforms.


Library
-------

- Issue #691291: codecs.open() should not convert end of lines on reading and
  writing.

- Issue #7975: correct regression in dict methods supported by bsddb.dbshelve.

- Issue #7959: ctypes callback functions are now registered correctly
  with the cycle garbage collector.

- Issue #6243: curses.getkey() can segfault when used with ungetch.
  Fix by Trundle and Jerry Chen.

- Issue #7597: curses.use_env() can now be called before initscr().
  Noted by Kan-Ru Chen.

- Issue #7970: email.Generator.flatten now correctly flattens message/rfc822
  messages parsed by email.Parser.HeaderParser.

- Issue #3426: ``os.path.abspath`` now returns unicode when its arg is unicode.

- Issue #7835: shelve should no longer produce mysterious warnings during
  interpreter shutdown.

- Issue #4772: Raise a ValueError when an unknown Bluetooth protocol is
  specified, rather than fall through to AF_PACKET (in the `socket` module).
  Also, raise ValueError rather than TypeError when an unknown TIPC address
  type is specified.  Patch by Brian Curtin.

- Issue #6939: Fix file I/O objects in the `io` module to keep the original
  file position when calling `truncate()`.  It would previously change the
  file position to the given argument, which goes against the tradition of
  ftruncate() and other truncation APIs.  Patch by Pascal Chambon.

- Issue #7773: Fix an UnboundLocalError in platform.linux_distribution() when
  the release file is empty.

- Issue #7748: Since unicode values are supported for some metadata options
  in Distutils, the DistributionMetadata get_* methods will now return an utf-8